--- a/css/base.css
+++ b/css/base.css
@@ -15,6 +15,12 @@
     font-family: 'League Spartan', sans-serif;
 }
 
+html,
+body {
+    width: 100%;
+    height: 100%;
+}
+
 a {
     color: inherit;
     text-decoration: none;
