--- a/css/base.css
+++ b/css/base.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@500;600;700&display=swap');
 
 :root {
-    --dark-Gray: hsl(0, 0%, 63%);
+    --dark-gray: hsl(0, 0%, 63%);
     --black: hsl(0, 0%, 0%);
     --white: hsl(0, 0%, 100%);
-    --very-dark-Gray: hsl(0, 0%, 27%);
+    --very-dark-gray: hsl(0, 0%, 27%);
 }
 
 * {
