--- a/css/base.css
+++ b/css/base.css
@@ -15,10 +15,15 @@
     font-family: 'League Spartan', sans-serif;
 }
 
+
 html,
 body {
     width: 100%;
     height: 100%;
+}
+
+h1, h2, h3, p {
+    overflow-wrap: break-word;
 }
 
 a {
