--- a/css/index.css
+++ b/css/index.css
@@ -145,7 +145,10 @@
 }
 
 .main__about-us {
+    width: 100%;
+    height: auto;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     grid-area: main-about-us;
 }
@@ -153,8 +156,13 @@
 
 .about-us__image {
     width: 30%;
+    min-width: 20em;
     height: 100%;
     object-fit: cover;
+}
+
+.main__about-us__second-image {
+    flex-grow: 2;
 }
 
 .main__about-us__content {
@@ -162,6 +170,7 @@
     height: 100%;
     display: grid;
     place-items: center;
+    flex-grow: 1;
 }
 
 .about-us__content__container {
@@ -185,4 +194,94 @@
     font-size: 1em;
     line-height: 1.5em;
     color: var(--dark-gray);
+}
+
+@media (max-width: 1015px) {
+    .main {
+        grid-template-columns: repeat(4, 25%);
+        grid-template-areas:
+            "main-menu main-menu main-content main-content"
+            "main-about-us main-about-us main-about-us main-about-us";
+    }
+
+}
+
+@media (max-width: 885px) {
+    .main {
+        grid-template-columns: 100%;
+        grid-template-rows: 45% 55% 100%;
+        grid-template-areas:
+            "main-menu"
+            "main-content"
+            "main-about-us";
+    }
+
+    .header__nav__menu-list {
+        display: none;
+    }
+
+    .main__about-us {
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+
+    .main__about-us__content {
+        width: 100%;
+    }
+
+    .main__content {
+        padding: 0 2em;
+        display: grid;
+        place-items: center;
+    }
+
+    .main__content__item {
+        width: 100%;
+        min-width: auto;
+    }
+
+    .main__content__slider {
+        width: 5em;
+        height: 2em;
+        bottom: 100%;
+        left: calc(100% - 5em);
+    }
+
+    .slider__next__image {
+        width: 60%;
+        margin: 0 auto;
+    }
+
+    .content__item__title {
+        font-size: 2.5em;
+    }
+
+    .about-us__image {
+        width: 100%;
+        height: 100%;
+        min-width: auto;
+    }
+
+    .main__content__shop-now {
+        font-size: .95em;
+        margin-top: 2.3em;
+    }
+
+    .main__content__shop-now__icon {
+        width: 15%;
+    }
+
+    .description__home-page {
+        font-size: .95em;
+    }
+
+    .about-us__content__container {
+        width: 100%;
+        padding: 3em 2em;
+    }
+
+    .content__container__title {
+        font-size: .9em;
+        letter-spacing: .3em;
+    }
 }
