--- a/css/index.css
+++ b/css/index.css
@@ -230,6 +230,7 @@
     }
 
     .main__menu__header {
+        position: relative;
         padding: 2.5em 2em;
     }
 
@@ -258,11 +259,23 @@
         left: 0;
         background-color: var(--white);
     }
-    
+
+
     .header__nav__menu--open {
         transition: all .5s ease-in-out;
-        animation: slide-top-down .5s alternate-reverse;
+        animation: slide-top-down .3s alternate-reverse;
         top: 0px;
+    }
+
+    .header__nav__menu--open::after {
+        content: "";
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, .75);
+        position: fixed;
+        top: 6em;
+        left: 0;
+        z-index: 1;
     }
 
 
